@@ -16,7 +16,11 @@ if [[ $IS_CAPTURE_HEAP_DUMP_ON_ERROR = true ]]; then
   fi
 fi
 #30781 - Allocate 32KB for log4j appender buffer to ensure that each line is logged in a single println
-JAVA_OPTS=$JAVA_OPTS" -Dlog4j.encoder.byteBufferSize=32768"
+JAVA_OPTS=$JAVA_OPTS" -Dlog4j.encoder.byteBufferSize=32768 -Dlog4j2.configurationFile=log4j2.xml"
+#needed because we make ThreadLocal.get(Thread) accessible in IntegrationRunner.stopOrphanedThreads
+JAVA_OPTS=$JAVA_OPTS" --add-opens=java.base/java.lang=ALL-UNNAMED"
+# tell jooq to be quiet (https://stackoverflow.com/questions/28272284/how-to-disable-jooqs-self-ad-message-in-3-4)
+JAVA_OPTS=$JAVA_OPTS" -Dorg.jooq.no-logo=true -Dorg.jooq.no-tips=true"
 export JAVA_OPTS
 
 # Wrap run script in a script so that we can lazy evaluate the value of APPLICATION. APPLICATION is
